force-app/main/default/objects/survey__c/survey__c.object-meta.xml
<CustomObject>
    <label>アンケート</label>
    <nameField>
        <label>アンケート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>