force-app/main/default/objects/survey__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先</label>
    <type>Text</type>
</CustomField>