force-app/main/default/objects/survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>*得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>アンケート</relationshipLabel>
    <relationshipName>Contact_Survey</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>