force-app/main/default/objects/survey__c/fields/CS_1__c.field-meta.xml
<CustomField>
    <fullName>CS_1__c</fullName>
    <label>野原のSDGｓ建材サイトを知っていますか？</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>