force-app/main/default/objects/survey__c/fields/qa10__c.field-meta.xml
<CustomField>
    <fullName>qa10__c</fullName>
    <label>質問と回答-10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>