force-app/main/default/objects/survey__c/fields/qa11__c.field-meta.xml
<CustomField>
    <fullName>qa11__c</fullName>
    <label>質問と回答-11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>