force-app/main/default/objects/survey__c/fields/qa12__c.field-meta.xml
<CustomField>
    <fullName>qa12__c</fullName>
    <label>質問と回答-12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>