force-app/main/default/objects/survey__c/fields/surveyDate__c.field-meta.xml
<CustomField>
    <fullName>surveyDate__c</fullName>
    <label>調査実施日</label>
    <type>Date</type>
</CustomField>